# repo-assistant

./: .gitignore  README.md  justfile  pyproject.toml
_data/: repository_data.json
aihero/course/: pyproject.toml
aihero/project/: README.md
aihero/project/src/: agent_repository_qa.py  app_streamlit.py  chunk_repository_data.py  evaluate_agent_logs.py  generate_eval_questions.py  ingest_github_repo.py  logs.py  run_eval_questions.py  search_repository_data.py
