[project]
name = "repo-assistant"
version = "0.1.0"
description = "7-Day AI Agents Email Crash-Course"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "minsearch>=0.0.10",
    "pydantic-ai>=1.72.0",
    "python-frontmatter>=1.1.0",
    "requests>=2.32.5",
    "sentence-transformers>=5.3.0",
    "streamlit>=1.55.0",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
]

